@@ -1,7 +1,8 @@
-TAG: annotload-tr6519-BP
+TAG: annotload-tr6519-1
 DATE: 02/18/2013
 STAFF: sc
 CHANGES: N2MO/TR6510 branch point tag
+1) new parameter for goahumanload
 
 TAG: annotload-5-1-1-4
 DATE: 01/06/2013
